--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -4,6 +4,26 @@
 [item-name]
 
 
+[glowing-plants]
+glowing-bush=Luminous Bush
+glowing-reed=Glow Reeds
+glowing-tree=Sparkle Tree
+glowing-lily=Light Lily
+
+
+[glowing-color-name]
+red=Red
+orange=Orange
+yellow=Yellow
+green=Green
+cyan=Cyan
+argon=Light Blue
+blue=Blue
+purple=Purple
+magenta=Magenta
+white=White
+
+
 
 [mod-setting-name]
 glow-plants=Generate glowing plants
