--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -28,6 +28,7 @@ white=White
 [mod-setting-name]
 glow-plants=Generate glowing plants
 glow-biters=Make biters glow in the dark
+plant-density=Plant spawn density
 
 
 [mod-setting-description]
