--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -30,6 +30,7 @@ glow-plants=Generate glowing plants
 glow-biters=Make biters glow in the dark
 plant-density=Plant spawn density
 script-lights=Use LuaRendering control script lights
+light-scale=Plant glow radius scalar
 
 
 [mod-setting-description]
