--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -34,4 +34,4 @@ light-scale=Plant glow radius scalar
 
 
 [mod-setting-description]
-script-lights=Whether the lights on the plants use the LuaRendering mod scripting system for adding lights. This is cleaner and more reliable, but is markedly worse for client framerate performance on large maps. If this option is false, the lights will be accomplished with hidden entities instead, which does not have the FPS impact, but is messier and may cause weird issues like rails not working properly if placed directly adjacent to glowing plants, or lights persisting after their plant is removed.
+script-lights=Whether the lights on the plants use the LuaRendering mod scripting system for adding lights. This is cleaner and more reliable, but is markedly worse for client framerate performance on large maps. If this option is false, the lights will be accomplished with hidden entities instead, which does not have the FPS impact, but is messier and may cause weird issues like lights persisting after their plant is removed via unexpected means.
